# SkyeEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/browser/: CMakeLists.txt  README.md  draw.cpp  main.cpp  state.cpp  styles.cpp
editor/browser/internal/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
editor/coreui/: CMakeLists.txt  main.cpp
editor/coreui/internal/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
engine/loader/: CMakeLists.txt  args.cpp  draw.cpp  event.cpp  main.cpp
include/: KHR  SDL2  glad
include/editor/browser/: draw.hpp  state.hpp  styles.hpp
include/editor/browser/internal/: imgui_impl_opengl3.h  imgui_impl_sdl.h
include/editor/coreui/: defines.h
include/editor/coreui/internal/: imgui_impl_opengl3_loader.h
include/engine/loader/: args.hpp  draw.hpp
include/imgui/: imconfig.h  imgui.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstd_truetype.h
include/loader/: draw.hpp  event.hpp
